# SDL_Drums

./: CMakeLists.txt  README.md  run.sh  run.txt
src/: drumsmodel.cpp  drumsmodel.h  drumsview.cpp  drumsview.h  fontscontainer.cpp  fontscontainer.h  main.cpp  mainwindow.cpp  mainwindow.h  rotationbutton.cpp  rotationbutton.h
